# lang

./: .gitignore  README.md  agent.txt  pyproject.toml
app_01/: README.md
app_01/projects/app_01/: pyproject.toml
app_01/projects/app_01/app/backend/: config.py  main.py  models.py  service_translater.py
app_01/projects/app_01/app/backend/core/: config.py
app_01/projects/app_01/app/backend/db/: crud.py
app_01/projects/app_01/app/backend/db/crud/: language.py
app_01/projects/app_01/app/backend/models/: translate.py
app_01/projects/app_01/app/backend/routers/: chat.py  language.py  translate.py
app_01/projects/app_01/app/frontend/: index.html  package-lock.json  package.json
app_01/projects/app_01/app/frontend/src/: style.css
app_01/projects/app_01/app/frontend/src/components/: FeatureCards.vue  FloatingOrb.vue  LanguageSelector.vue  LoadingSpinner.vue  PageHeader.vue  Translate.vue  TranslationArea.vue
app_01/projects/app_01/app/frontend/src/composables/: useTranslator.js
app_01/projects/app_01/app/frontend/src/data/: languages.js
app_02/: 0.2.27  app.py
build_a_agent/: config.py  main.py
build_a_chatbot/: config.py  gemini_chatbot.py  no_memory.py  prompt_plus.py  simple_chatbot.py  with_memory.py  with_prompts.py
build_a_simple_LLM_application/: app.py  config.py
projects/translater/app/backend/db/: database.py
projects/translater/app/backend/models/: language.py
projects/translater/app/frontend/src/: App.vue
projects/translater/app/frontend/src/components/: Translate.vue
