[project]
name = "lang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.3",
    "langchain[google-genai]>=0.3.25",
    "notebook>=7.4.3",
    "python-decouple>=3.8",
]

[tool.uv.workspace]
members = ["app_01/projects/app_01"]
